...
        },
        supportingText = {
            if (isError) Text(
                if(restrictToNumber && value.isNotEmpty() && value.toDoubleOrNull() == null){
                    "Please enter a valid number"
                } else {
                    "This field is required"
                }
                , color = Color.Red)
        }
    )
}
